# django_basico_pythonando

./: db.sqlite3  pyproject.toml
django_basico/: settings.py  urls.py
produtos/: models.py  urls.py  views.py
produtos/migrations/: 0001_initial.py
produtos/templates/: ver_produto.html
