[tool.poetry]
name = "django-basico-pythonando"
version = "0.1.0"
description = ""
authors = ["Victor Contreras <vgabriel@mslcorporate.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
